upgrade to vue 3.0

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 <h2>{{ page.title }}</h2>
 {{ content }}
-<div class='toc-container'>
+<div ref='toc-container' style="display: none;">
     {% include toc.html html=content %}
 </div>
