--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 <h2>{{ page.title }}</h2>
 {{ content }}
-<div ref='toc-container' style="display: none;">
+<div id='toc-content' style="display: none;">
     {% include toc.html html=content %}
 </div>
