--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -84,7 +84,7 @@
         {% endcapture %}
         {% capture my_toc %}
             {{ my_toc }}
-{{ space }}{{ listModifier }} {{ listItemClass }} [{{ heading_body | replace: "|", "\|" }}]({% if include.baseurl %}{{ include.baseurl }}{% endif %}#{{ html_id }})
+{{ space }}{{ listModifier }} {{ listItemClass }} [{{ heading_body | replace: "|", "\|" }}](javascript:;)
             {% if include.anchor_class %}{:.{{ include.anchor_class }}}{% endif %}
         {% endcapture %}
     {% endfor %}
