--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,6 @@
 </div>
 <div id="disqus_thread">
   <div style="text-align: center;">
-    <button onclick="disqus();">加载评论</button>
+    <button onclick="disqus('{{ page.id }}', '{{ page.title }}')">加载评论</button>
   </div>
 </div>
