--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,7 @@
 <div class='toc-container'>
   {% include toc.html html=content %}
 </div>
-<div id="disqus_thread">
-  <div style="text-align: center;">
-    <button onclick="disqus('{{ page.id }}', '{{ page.title }}')">加载评论</button>
-  </div>
+<div id="disqus_button" style="text-align: center;">
+  <button onclick="disqus('{{ page.id }}', '{{ page.title }}')">加载评论</button>
 </div>
+<div id="disqus_thread"></div>
